--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@
     <main>
       <!-- Loads the specified .html file -->
       <load src="./partials/hero.html" />
-      <load src="./partials/team.html" />
+      <load src="./partials/about-us.html" />
+      <load src="./partials/out-yachts.html" />
+      <load src="./partials/advantages.html" />
+      <load src="./partials/rent-a-yacht.html" />
+      <load src="./partials/reviews.html" />
     </main>
 
     <load src="./partials/footer.html" />
