--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <!-- Loads the specified .html file -->
       <load src="./partials/hero.html" />
       <load src="./partials/about-us.html" />
-      <load src="./partials/out-yachts.html" />
+      <load src="./partials/our-yachts.html" />
       <load src="./partials/advantages.html" />
       <load src="./partials/rent-a-yacht.html" />
       <load src="./partials/reviews.html" />
