--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
       <load src="./partials/advantages.html" />
       <load src="./partials/rent-a-yacht.html" />
       <load src="./partials/reviews.html" />
+      <load src="./partials/mobile-menu.html" />
     </main>
 
     <load src="./partials/footer.html" />
